# cosmic-applet-media

./: Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
i18n/en/: cosmic_applet_media.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  main.rs  window.rs
